2007-09-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genReceive): fixed bug 1788177
	* support/regression/tests/bug1788177.c: new, added

2007-09-04 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* doc/sdccman.lyx: mentioned d52 and cmake, customizing startup code
	* device/include/mcs51/lint.h added keyword __naked

2007-09-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/pic16/glue.c,
	* src/pic/glue.c,
	* src/SDCCmem.h: removed maxRegBank
	* src/SDCCmem.c (allocVariables): removed maxRegBank and moved setting
	  RegBankUsed[] to checkFunction() in SDCCsymt.c to fix bug 1759839
	* src/SDCCsymt.c (checkFunction): set RegBankUsed[] here
	* src/mcs51/peep.c (isCallerSaveFunc, termScanAtFunc): changed function
	  name and behaviour to handle banked functions
	  (scan4op): and use it to fix bug 1786213

2007-09-03 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic18f248.h,
	* device/include/pic16/pic18f258.h,
	* device/include/pic16/pic18f448.h,
	* device/lib/pic16/libdev/pic18f248.c,
	* device/lib/pic16/libdev/pic18f258.c,
	* device/lib/pic16/libdev/pic18f448.c: fixed TRISEbits,
	  added T0CONbits, fixes #1786891

2007-08-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (genFarPointerSet),
	* src/hc08/ralloc.c (packRegisters),
	* src/mcs51/ralloc.c (packRegisters),
	* src/SDCCcse.c (cseBBlock): check if result is a symbol first to fix
	  bug 1750318
	* src/SDCCicode.h: POINTER_SET can be true for literals too
	* support/regression/tests/bug1750318.c: new, added

2007-08-23 Borut Razem <borut.razem AT siol.net>

	* debugger/mcs51/sdcdb.c: fixed compilation with older readline
	  library versions without the completition functionality

2007-08-22 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic18f1220.h,
	* device/lib/pic16/libdev/pic18f1220.c: applied patch #1776191

2007-08-12 Borut Razem <borut.razem AT siol.net>

	* debugger/mcs51/Makefile.in: support/Util/SDCCerr.[ch] moved to src
